Updated files and added final bot logic

--- a/TomaForexBot/.env
+++ b/TomaForexBot/.env
@@ -1,4 +1,5 @@
-TELEGRAM_BOT_TOKEN=7614899540:AAHoa6x1W_busDVcbd4bAOMIe4qAyS7r6s0
+TELEGRAM_TOKEN=7614899540:AAHoa6x1W_busDVcbd4bAOMIe4qAyS7r6s0
 TELEGRAM_CHAT_ID=6074056245
 TRADINGVIEW_USERNAME=tomagm2010
 TRADINGVIEW_PASSWORD=Ciupanezul81_TW@2025$%
+FINNHUB_API_KEY=d0lp1jhr01qpni30h4u0d0lp1jhr01qpni30h4ug
