--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+aiohappyeyeballs==2.6.1
 aiohttp==3.12.7
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
 APScheduler==3.6.3
+async-timeout==4.0.3
+attrs==25.3.0
 beautifulsoup4==4.13.4
 blinker==1.9.0
 cachetools==4.2.2
@@ -13,12 +17,14 @@ colorama==0.4.6
 contourpy==1.3.2
 curl_cffi==0.10.0
 cycler==0.12.1
+distro==1.9.0
 exceptiongroup==1.2.2
 fastapi==0.115.12
 feedparser==6.0.11
 Flask==3.1.1
 fonttools==4.57.0
 frozendict==2.4.6
+frozenlist==1.6.0
 h11==0.14.0
 httpcore==0.16.3
 httpx==0.23.3
@@ -26,16 +32,20 @@ idna==3.10
 investpy==1.0.8
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jiter==0.10.0
 joblib==1.5.1
 kiwisolver==1.4.8
 lxml==5.4.0
 MarkupSafe==3.0.2
 matplotlib==3.10.1
+MetaTrader5==5.0.4874
 mplfinance==0.12.10b0
+multidict==6.4.4
 multitasking==0.0.11
 nest-asyncio==1.6.0
 nltk==3.9.1
 numpy==1.26.4
+openai==1.84.0
 packaging==25.0
 pandas==2.2.1
 peewee==3.18.1
@@ -43,6 +53,7 @@ pillow==11.2.1
 platformdirs==4.3.8
 praw==7.8.1
 prawcore==2.4.0
+propcache==0.3.1
 protobuf==6.30.2
 pycparser==2.22
 pydantic==2.11.4
@@ -74,4 +85,5 @@ uvicorn==0.34.2
 websocket-client==1.8.0
 websockets==15.0.1
 Werkzeug==3.1.3
+yarl==1.20.0
 yfinance==0.2.61
