--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ pycparser==2.22
 pydantic==2.11.4
 pydantic_core==2.33.2
 pyparsing==3.2.3
+pytest>=8.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-telegram-bot==20.0
