--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ annotated-types==0.7.0
 anyio==4.9.0
 APScheduler==3.6.3
 async-timeout==4.0.3
+asyncpraw==7.7.0
 attrs==25.3.0
 beautifulsoup4==4.13.4
 blinker==1.9.0
